adjust banner image to 100vh, change logo to favicon and fix header spacing

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -22,9 +22,10 @@ header {
     }
 
     img{
-        width: 190px;
+        width: 55px;
         height: auto;
         margin: 15px 25px;
+        padding: 10px 0 5px 0;
     }
 }
 
@@ -37,5 +38,11 @@ header {
     left: 0;
     z-index: 2;
     width: 100%;
+    
+        img{
+            width: 65px;
+            padding-bottom: 0;
+        }
+
     }
 }
